Closed Bug 139290 Opened 24 years ago Closed 23 years ago

Interaction between windows leads to doubled bookmarks

Categories

(SeaMonkey :: Bookmarks & History, defect, P3)

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.4alpha

People

(Reporter: john_moore, Assigned: janv)

References

Details

(Whiteboard: [adt2])

Attachments

(1 file)

From Bugzilla Helper: User-Agent: Mozilla/5.0 (OS/2; U; Warp 4.5; en-US; rv:1.0rc1) Gecko/20020418 BuildID: 2002041811 This is probably related to #114559. If I open a new browser window and change the state of a bookmark folder, this action can cause problems with the apparent doubling of links in the original browser window when you click the apparently open bookmark folder to close it. Reproducible: Always Steps to Reproduce: 1. Open a bookmark folder. 2. Click Window->Navigator to open a new window. The same bookmark folder is open. 3. In the new window, click the open bookmark folder to close it. 4. Close that window. 5. Back in the original Navigator window, click the apparently-open folder to close it. Actual Results: Instead of "closing," you see the contents of the open folder appear to double! Expected Results: Closed the open folder. I would speculate that the "close" click in the new window resets an internal flag representing the state of the bookmark folder, but there is no repaint of the bookmarks in the parent caused by this change, so the next click in the parent causes the doubling. I can verify that no problem occurs when the following steps occur: 1. Open a bookmark folder. 2. Click Window->Navigator to open a new window. The same bookmark folder is open. 3. In the new window, click the open bookmark folder to close it. 4. Close that window. 5. Repeat Step 2. The original bookmark folder is now closed. Click it to open it. 6. Close the window. 7. Click the open bookmark folder in the first window and observe that it responds correctly by closing.
This is a pretty big bug. upping severity. Note that the references to the bookmark in this scenario are referring to the bookmarks folder in the Sidebar.
Severity: normal → major
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: OS/2 → All
Hardware: PC → All
Sounds like it might be caused by bug 122578.
Summary: Bookmark interaction between windows → Interaction between windows leads to doubled bookmarks
*** Bug 141637 has been marked as a duplicate of this bug. ***
*** Bug 140432 has been marked as a duplicate of this bug. ***
this bug reports on open/close problems when you are using multiple mozilla windows. it might also be worth noting that using the bookmarks manager with just one window open has the same effect. [using the bookmarks manager with multiple windows also has the same problem.] also, the problem also manifests in the opposite direction as what's mentioned here in this bug description. i.e., if the bookmark folder is closed in the sidebar of the original window and you open that bookmark folder in the sidebar of a second window you will also have problems with the open/close state in the first window, although it manifests somewhat differently.
*** Bug 145360 has been marked as a duplicate of this bug. ***
*** Bug 148005 has been marked as a duplicate of this bug. ***
*** Bug 149289 has been marked as a duplicate of this bug. ***
*** Bug 152225 has been marked as a duplicate of this bug. ***
*** Bug 152445 has been marked as a duplicate of this bug. ***
Yea, it's really annoying. I'll vote for it.
Since there are so many bug reports, I would say this is a serious and urgent bug, at least P3, right? And I found it is not only a bookmark bug, but more like a sidebar bug, because other folders like the folders in History also have this problem.
It is more like a tree bug. Mail and news also have this bug. Say you open a new Mail window by double clicking the inbox, then you can try this bug between them.
Maybe another variation of this bug: have 2 windows open, and in the first sidebar a bookmark folder closed, but the same folder opened in the second sidebar. Now add a new bookmark to the second, open folder. It appear OK, but the same folder in the first sidebar still has [+] "closed" state, but the new bookmark is visible under it as if the folder was opened and the new bookmark was the only entry. Can provide screenshot if needed. This one is not about duplication but still about incorrect interaction. Confirming the other effects are still there in 1.1latest from 2002081013.
-> me
Assignee: ben → varga
Keywords: nsbeta1
The problem is that rdfliner relies on the current state of container in data source, so it will get confused when it is changed elsewhere. It should probably cache this state.
*** Bug 122578 has been marked as a duplicate of this bug. ***
Nav triage team: nsbeta1+/adt2
Keywords: nsbeta1 → nsbeta1+
Whiteboard: [adt2]
Attached patch fix — — Splinter Review
Attachment #116603 - Flags: superreview?(jaggernaut)
Attachment #116603 - Flags: review?(waterson)
Status: NEW → ASSIGNED
Priority: -- → P3
Target Milestone: --- → mozilla1.4alpha
Blocks: 196756
Attachment #116603 - Flags: superreview?(jaggernaut) → superreview+
Attachment #116603 - Flags: review?(waterson) → review?(bryner)
Attachment #116603 - Flags: review?(bryner) → review+
checked in
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Verified in the Mach-O OS X 2003-03-20-03 trunk and Win32 2003-03-21-08 trunk builds.
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: