Fix for bug 139290. Interaction between windows leads to doubled bookmarks. r=bryner, sr=jag - cache the open state of container instead of quering the data source every time